Bison/Grammars/example-useless.output
Useless nonterminals

   B
   C


Terminals which are not used

   b


Useless rules

    4 S: A B C

    5 B: A C

    6 C: B A


State 5 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: A

    2 A: A A
    3  | a


Terminals, with rules where they appear

$end (0) 0
error (256)
a (258) 3
b (259)


Nonterminals, with rules where they appear

$accept (5)
    on left: 0
S (6)
    on left: 1, on right: 0
A (7)
    on left: 2 3, on right: 1 2


state 0

    0 $accept: . S $end

    a  shift, and go to state 1

    S  go to state 2
    A  go to state 3


state 1

    3 A: a .

    $default  reduce using rule 3 (A)


state 2

    0 $accept: S . $end

    $end  shift, and go to state 4


state 3

    1 S: A .
    2 A: A . A

    a  shift, and go to state 1

    $default  reduce using rule 1 (S)

    A  go to state 5


state 4

    0 $accept: S $end .

    $default  accept


state 5

    2 A: A . A
    2  | A A .

    a  shift, and go to state 1

    a         [reduce using rule 2 (A)]
    $default  reduce using rule 2 (A)

    A  go to state 5
